Stylesheet/emote/tag updates 2014-11-16

--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -349,11 +349,11 @@ a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[hr
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* b200x200b 'motes. */
-a[href|="/dirtypinkie"]
-{background-image:url(%%b200x200b%%);width:200px;height:200px;display:block;float:left;}
+a[href|="/dirtypinkie"], a[href|="/nightcest"]
+{background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
-a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/cadgym"], a[href|="/wetcora"]
+a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/cadgym"], a[href|="/wetcora"], a[href|="/brushmyass"], a[href|="/nmmpresents"], a[href|="/pinkiepop"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -361,15 +361,15 @@ a[href|="/example6"]
 {background-image:url(%%300x300a%%);width:300px;height:300px;display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"],a[href|="/examplecode6"] 
+a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"],a[href|="/examplecode6"], 
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance"]
+a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance"], a[href|="/nightcest"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"]
+a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"],    
 {background-position: -200% 0%;}
 
 /* Grid pos 3,0 'motes */
@@ -377,15 +377,15 @@ a[href|="/cadgym"]
 {background-position: -300% 0%;}
 
 /* Grid pos 0,1 'motes */
-a[href|="/doublemoon"], a[href|="/wetcora"], a[href|="/spreadingcadance"]
+a[href|="/doublemoon"], a[href|="/wetcora"], a[href|="/spreadingcadance"], 
 {background-position: 0% -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/wetmoons"]
+a[href|="/wetmoons"], a[href|="/brushmyass"] 
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/kissmyass"]
+a[href|="/kissmyass"], a[href|="/nmmpresents"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -393,20 +393,24 @@ a[href|="/tiapresenting"],
 {background-position: 0% -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/creammuffin"]
+a[href|="/creammuffin"], a[href|="/nmmpresenting"] 
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/sexygaming"]
+a[href|="/sexygaming"],
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/pm"],
+a[href|="/pm"], 
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/cadancebj"]
+a[href|="/cadancebj"],  
 {background-position: -100% -300%;}
+
+/* Grid pos 3,1 'motes */
+a[href|="/pinkiepop"]
+{background-position: -300% -100%;}
 
 /* Misfits a */
 a[href|="/trixiepresents"], a[href|="/queenpresents"], a[href|="/itschristmas"], a[href|="/queennurse"], a[href|="/cherry"], a[href|="/fullmoon"], a[href|="/pinkiepresents"], a[href|="/bbinsocks"]
@@ -429,17 +433,18 @@ a[href|="/stripeass"], a[href|="/zecoraoops"], a[href|="/zecoraanal"], a[href|="
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Misfits f */
-a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/twibadteacher"] , a[href|="/twilacornpeek"], a[href|="/twisockpresents"], a[href|="/twispread"], a[href|="/tdschoolfillies"]
+a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/twibadteacher"] , a[href|="/twilicornpeek"], a[href|="/twisockpresents"], a[href|="/twispread"], a[href|="/tdschoolfillies"]
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Misfits g */
-a[href|="/raricock"], a[href|="/pussylantern"]
+a[href|="/raricock"], a[href|="/pussylantern"], a[href|="/sonatass"], a[href|="/queenass"], a[href|="/pillowtalk"]
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 
 /* Animated Emotes */
 a[href|="/twichug"], a[href|="/chugchugchug"] {background: url(%%chugchugchug%%) no-repeat;width:150px;height:116px;display:block;float:left;}
 a[href|="/asstoass"] {background: url(%%asstoass%%) no-repeat;width:200px;height:200px;display:block;float:left;}
+a[href|="/shakethatass"] {background: url(%%G1%%) no-repeat;width:250px;height:250px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/trixiepresents"] {width:250px;height:200px;}
@@ -483,11 +488,15 @@ a[href|="/twidrip"] {width: 176px;height:200px;background-position: 0px 0px;}
 a[href|="/twipanties"] {width: 188px;height:150px;background-position: 0px -200px;}
 a[href|="/twibegentle"] {width: 118px;height:150px;background-position: 0px -350px;}
 a[href|="/twibadteacher"] {width: 186px;height:200px;background-position: -176px 0px;}
-a[href|="/twilacornpeek"] {width: 209px;height:200px;background-position: -188px -200px;}
+a[href|="/twilicornpeek"] {width: 209px;height:200px;background-position: -188px -200px;}
 a[href|="/ggnome"] {width: 170px;height:200px;background-position: 0px -598px;}
 a[href|="/twispread"] {width: 226px;height:200px;background-position: -137px -400px;}
 a[href|="/tdschoolfillies"] {width: 261px;height:200px;background-position: -137px -600px;}
 a[href|="/twisockpresents"] {width: 137px;height:300px;background-position: 0px -500px;}
 a[href|="/raricock"] {width: 158px;height:250px;background-position: 0px 0px;}
 a[href|="/pussylantern"] {width: 148px;height:150px;background-position: -158px 0px;}
+a[href|="/pillowtalk"] {width: 215px;height:200px;background-position: -161px -200px;}
+a[href|="/sonatass"] {width: 147px;height:200px;background-position: -306px 0px;}
+a[href|="/queenass"] {width: 161px;height:200px;background-position: 0px -250px;}
+a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
