--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -29,7 +29,7 @@ div.titlebox span.word {
 /* Header */
 #header {
 height: 0x; 
-    background: url(%%pwettypwinkpumpkinpwincess%%) no-repeat #FFFFFF;
+    background: url(%%aspecialflake%%) no-repeat #FFFFFF;
     margin-bottom: 52px;
     background-position: 83% 20px;
     border-bottom: 0px solid #314D5B;
@@ -59,7 +59,7 @@ height: 0x;
 }
 
 #header .pagename.redditname a {
-    background: url(%%ssp%%) 0px 0px no-repeat;
+    background: url(%%winterheader%%) 0px 0px no-repeat;
     width: 1100px;
     height: 237px;
     display: inline-block;
@@ -769,7 +769,7 @@ div[data-fullname$="a"] .usertext-body .md:after
 important;}
 div[data-fullname$="t"] .usertext-body .md:after
 
-{content:" Perfect."; color: #707 !important;}
+{content:" It takes a lot to make a Sault."; color: #707 !important;}
 div[data-fullname$="w"] .usertext-body .md:after
 
 {content:" See what I mean?"; color: #707 !important;}
@@ -785,7 +785,7 @@ div[data-fullname$="s"] .usertext-body .md:after
 important;}
 div[data-fullname$="m"] .usertext-body .md:after
 
-{content:" Also, Season 4 is great."; color: #707 !
+{content:" A rainbow dash of love to make it nice!"; color: #707 !
 
 important;}
 div[data-fullname$="f"] .usertext-body .md:after
