--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -399,7 +399,7 @@ a[href|="/raritydaww"],a[href|="/rraritydaww"],a[href|="/fluttershh"],a[href|="/
   background-position:0 -400%;
 }
 
-a[href|="/ajsup"],a[href|="/ajwhatsgood"],a[href|="/rajsup"],a[href|="/rajwhatsgood"],a[href|="/ajugh"],a[href|="/rajugh"],a[href|="/raritysad"],a[href|="/rraritysad"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],.side .md table tr:nth-of-type(11) td:nth-of-type(1):after,.flair-roseluck {
+a[href|="/ajsup"],a[href|="/ajwhatsgood"],a[href|="/rajsup"],a[href|="/rajwhatsgood"],a[href|="/ajugh"],a[href|="/rajugh"],a[href|="/raritysad"],a[href|="/rraritysad"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],.side .md table tr:nth-of-type(11) td:nth-of-type(1):after,.flair-roseluck {
   background-position:0 -500%;
 }
 
@@ -407,7 +407,7 @@ a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcom
   background-position:0 -600%;
 }
 
-a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],.flair-wonderbolts {
+a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],.flair-wonderbolts {
   background-position:0 -700%;
 }
 
@@ -471,7 +471,7 @@ a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="
   background-position:-100% -400%;
 }
 
-a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],.side .md table tr:nth-of-type(11) td:nth-of-type(2):after,.flair-zecora {
+a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetwow"],a[href|="/sswow"],.side .md table tr:nth-of-type(11) td:nth-of-type(2):after,.flair-zecora {
   background-position:-100% -500%;
 }
 
@@ -479,7 +479,7 @@ a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/rppcute"],a[href|="/rcutiepie"
   background-position:-100% -600%;
 }
 
-a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],.flair-shadowbolts {
+a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],a[href|="/ssleaving"],a[href|="/sunsetleaving"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after,.flair-shadowbolts {
   background-position:-100% -700%;
 }
 
@@ -543,7 +543,7 @@ a[href|="/squintyjack"],a[href|="/rsquintyjack"],a[href|="/joy"],a[href|="/rjoy"
   background-position:-200% -400%;
 }
 
-a[href|="/rdcry"],a[href|="/rrdcry"],a[href|="/dumbfabric"],a[href|="/rdumbfabric"],a[href|="/derp"],a[href|="/rderp"],a[href|="/rdsalute"],a[href|="/rrdsalute"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],.side .md table tr:nth-of-type(11) td:nth-of-type(3):after,.flair-seafoam {
+a[href|="/rdcry"],a[href|="/rrdcry"],a[href|="/dumbfabric"],a[href|="/rdumbfabric"],a[href|="/derp"],a[href|="/rderp"],a[href|="/rdsalute"],a[href|="/rrdsalute"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/sunsetsalute"],a[href|="/sssalute"],.side .md table tr:nth-of-type(11) td:nth-of-type(3):after,.flair-seafoam {
   background-position:-200% -500%;
 }
 
@@ -611,7 +611,7 @@ a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/rpin
   background-position:-300% -400%;
 }
 
-a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],.side .md table tr:nth-of-type(11) td:nth-of-type(4):after,.flair-carrottop {
+a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],.side .md table tr:nth-of-type(11) td:nth-of-type(4):after,.flair-carrottop {
   background-position:-300% -500%;
 }
 
@@ -766,7 +766,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
   width:32px;
 }
 
-a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"] {
+a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"] {
   display:block;
   clear:none;
   float:left;
@@ -775,7 +775,7 @@ a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|
   background-image:url(%%sunnyamotes%%)!important;
 }
 
-a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"] {
+a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],a[href|="/ssleaving"],a[href|="/sunsetleaving"] {
   display:block;
   clear:none;
   float:left;
@@ -930,6 +930,7 @@ a[href|="/sunsetlaugh"],a[href|="/sslaugh"],a[href|="/rsunsetlaugh"],a[href|="/r
   width:112px;
   height:114px;
   background-image:url(%%sunsetlaugh%%);
+  background-position: 0 0;
 }
 
 a[href|="/sunsetshades"],a[href|="/ssshades"],a[href|="/rsunsetshades"],a[href|="/rssshades"] {
@@ -1091,7 +1092,7 @@ a[href|="/sunsetexcited"], a[href|="/ssexcited"] {
   background-position: -1027px 0 !important;
   margin-bottom: -18px;
   position: relative !important;
-  z-index: 98;
+  z-index: 998;
 }
 
 a[href|="/sunsetwalk"],a[href|="/rsunsetwalk"],a[href|="/sswalk"],a[href|="/rsswalk"] {
@@ -1143,7 +1144,7 @@ a[href|="/sunsetsenpai"],a[href|="/sssenpai"],a[href|="/sunsetsempai"],a[href|="
   background-position: -1426px 0;
   margin-bottom: -15px;
   position: relative !important;
-  z-index: 98;
+  z-index: 99;
 }
 
 a[href|="/unbreakablesunset"],a[href|="/unbreakabless"] {
@@ -1153,6 +1154,7 @@ a[href|="/unbreakablesunset"],a[href|="/unbreakabless"] {
   width:88px;
   height:174px;
   background-image:url(%%unbreakablesunset%%);
+  background-position: 0 0;
 }
 
 
@@ -1162,7 +1164,8 @@ a[href|="/standingsunset"],a[href|="/standingss"] {
   float:left;
   width:66px;
   height:176px;
-  background-image:url(%%ssstand%%);
+  background-image:url(%%ssstand%%)!important;
+  background-position: 0 0;
 }
 
 a[href|="/advicesunsetp"], a[href|="/advicesunseth"], a[href|="/advicessp"], a[href|="/advicessh"] {
@@ -1221,6 +1224,7 @@ a[href|="/clappingsunset"],a[href|="/sunsetclop"],a[href|="/ssclop"],a[href|="/r
   clear: none;
   float:left;
   background-image: url(%%clappingsunset%%)!important;
+  background-position: 0 0;
   height: 70px;
   width: 70px;
 }
@@ -1232,6 +1236,17 @@ a[href|="/sunsetapplauds"],a[href|="/rsunsetapplauds"],a[href|="/ssapplauds"],a[
   width: 96px;
   height: 120px;
   background-image: url(%%sunsetapplauds%%) !important;
+  background-position: 0 0;
+}
+
+a[href|="/sunsetgroovin"],a[href|="/ssgroovin"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 79px;
+  height: 121px;
+  background-image: url(%%sunsetgroovin%%);
+  background-position: 0 0;
 }
 
 START-PONYSCRIPT-IGNORE { color: red; }
@@ -1376,6 +1391,34 @@ a[href|="/sunsetclop"],a[href|="/ssclop"],a[href|="/clappingsunset"],a[href|="/r
 @keyframes ssclap {
   from{background-position: -70px}
     to{background-position: -280px}
+}
+
+a[href|="/sunsetgroovin"],a[href|="/ssgroovin"] {
+  background-image: url(%%sunsetgroovinstrip%%) !important;
+  -webkit-animation: ssgroove .96s steps(24) infinite;
+  -moz-animation: ssgroove .96s steps(24) infinite;
+  -o-animation: ssgroove .96s steps(24) infinite;
+  animation: ssgroove .96s steps(24) infinite;
+}
+
+@-webkit-keyframes ssgroove {
+  from {background-position: 0}
+  to {background-position: -1896px}
+}
+
+@-moz-keyframes ssgroove {
+  from {background-position: 0}
+  to {background-position: -1896px}
+}
+
+@-o-keyframes ssgroove {
+  from {background-position: 0}
+  to {background-position: -1896px}
+}
+
+@keyframes ssgroove {
+  from{background-position: 0}
+    to{background-position: -1896px}
 }
 
 a[href|="/flyingsunset"],a[href|="/flyingss"],a[href|="/rflyingsunset"],a[href|="/rflyingss"] {
