--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -162,9 +162,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:575px;
+ height:500px;
  width:100%;
- background-image:url(%%footer575%%);
+ background-image:url(%%tavitia%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -310,6 +310,10 @@ input[name=uh][value$="z"] ~ a:after {background-position: -200% -1100%}
  top: 240px;
  right: 10px;
  z-index:999
+}
+
+#RESHoverContainer {
+visibility: hidden;
 }
 
 /*Sidebar Filly end*/
@@ -1346,8 +1350,7 @@ a[href|="/engtavicheer"] {
 .flair-silverstar {background-position: -200% -2000%}
 .flair-peachbottom {background-position: -300% -2000%}
 
-/*.flair-flash {background-position: 0% -2100%}*/
-.flair-flash {background-position: -200% -1900%} /*FLASH GORDON! SAVIOR OF THE UNIVERSE!*/
+.flair-flash {background-position: 0% -2100%}
 .flair-sunset {background-position: -100% -2100%}
 .flair-gilda {background-position: -200% -2100%}
 .flair-thunderlane {background-position: -300% -2100%}
@@ -1389,9 +1392,6 @@ a.author[href$="bryvood"]:before {font-size:10px!important; visibility:visible!i
 a.author[href$="BlameTheJungler"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:visible!important; content: "LeafOnTheWind"}
 
-a.author[href$="MLP_William"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="MLP_William"]:before {font-size:10px!important; visibility:visible!important; content: "MLP_WiII_i_am"}
-
 a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "ErDer_HastNamenNicht"}
 
@@ -1400,12 +1400,6 @@ a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:vi
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly"}
-
-a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "| ZephyrC |"}
-
-a.author[href$="TwoWorldsCoexisting"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="TwoWorldsCoexisting"]:before {font-size:10px!important; visibility:visible!important; content: "TwoDogesCoexisting"}
 
 a.author[href$="Fuzzy_Gauntlets"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Fuzzy_Infinity_Gauntlets"}
