--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -205,10 +205,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%pinkie-stache-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%pinkie-alarm-hat%%);
+ width:70px;
+ height:69px;
+ margin-top:-44px;
  margin-left:5px;
  margin-bottom:0px;
  margin-right:-40px;
